# raqamli-karyer

./: .env.example  .gitignore  API (2).md  API.md  Karier_Kontrol_Loyiha_Hujjati.docx  Karyerlar_Nazorati_Tizimi.html  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  promt.txt  tsconfig.base.json  turbo.json
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  alembic.ini  dev.mjs  docker-compose.prod.yml  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_core_entities.py  0003_events.py  0004_district_geo.py  0005_protocols.py  0006_media.py  0007_quarry_materials.py  0008_drop_region_district_code.py  0009_event_uid_is_main.py  0010_trips.py  0011_trip_kon_enter.py  0012_quarry_api_key.py  0013_camera_credentials.py  0014_app_settings.py
backend/app/: main.py
backend/app/api/: local.py  weigh.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  app_setting.py  event.py  material.py  media.py  organization.py  protocol.py  quarry.py  region.py  trip.py  user.py  vehicle.py
backend/app/schemas/: auth.py  event.py  material.py  organization.py  protocol.py  quarry.py  region.py  scale.py  stats.py  trip.py  user.py  video.py
backend/app/services/: app_settings.py  detection.py  geo.py  plates.py  protocol.py  scale.py  stats.py  storage.py  trips.py  volume.py
backend/app/tests/: conftest.py  (+11 more)
backend/scripts/: backfill_trips.py  fix_plate_regions.py  purge_test_events.py  seed.py
(+65 files in other folders)
